@@ -7,6 +7,7 @@ UTIL:
 * type=rule | introduce 'filter=(group-tag is.regex /VALUE/)'
 * type=tag-merger | extend output why it can not be merged
 * different object classes | introduction of sase-api connection - update / separation between XML API and SaseAPI
+* type=address-/addressgroup-/service-/servicegroup-/tag-merger | extend with in=sase-api:// support
 
 BUGFIX:
 * class Zone.php | bugfix to create XML node "zone" if not yet available during creating of a new Zone
